--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -30,7 +30,7 @@
         <!--LinkedIn Logo Link-->
         <p>
             <a href="https://www.linkedin.com/in/stephen-crossley" target="_blank">
-                <img src="../images/logo.png" alt="LinkedIn Logo">
+                <img src="../Images/logo.png" alt="LinkedIn Logo">
             </a>
         </p>
 
