--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -52,7 +52,7 @@
             <input type="text" id="name" name="name" required><br><br>
         
             <!-- Radio Button -->
-            <label for="contact-method">Preferred Contact Method:</label><br>
+            <p>Preferred Contact Method:</p>
             <input type="radio" id="email" name="contact-method" value="email">
             <label for="email">Email</label>
             <input type="radio" id="phone" name="contact-method" value="phone">
