--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -25,9 +25,11 @@
         <a href="mailto:sjcrossl@syr.edu">Email Me</a>
     </p>
 
-    <!-- Profile Image -->
+    <!--LinkedIn Logo-->
     <p>
-        <img src="../Images/military-bio-photo.png" alt="Profile Image">
+        <a href="https://www.linkedin.com/in/stephen-crossley" target="_blank">
+            <img src="images/linkedin-logo.png" alt="LinkedIn Logo" width="50">
+        </a>
     </p>
 
     <!-- Embedded Google Map -->
