--- a/lab07/index.html
+++ b/lab07/index.html
@@ -8,9 +8,16 @@
 </head>
 
 <body>
+
+    <nav>
+        <a href="index.html">Home</a> | 
+        <a href="skills.html">Skills</a> | 
+        <a href="contact.html">Contact</a>
+    </nav>
+
     <h1>Stephen Crossley's Biography</h1> 
      
-     <p>
+    <p>
         <img src="images/military-bio-photo.png" alt="My Photoshop Image">
     </p>
 
@@ -47,5 +54,6 @@
     <footer>
         <p>&copy; 2025 Stephen Crossley</p>
     </footer>
+
 </body>
 </html>
