--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
+    
+    <nav>
+        <a href="index.html">Home</a>  
+        <a href="skills.html">Skills</a>  
+        <a href="contact.html">Contact</a>
+    </nav>
+
     <h1>My Skills</h1> 
+
     <table> 
         <caption>Military, Shooting, and Travel Skills</caption>
         <tr>
