--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -16,7 +16,7 @@
 
     <h1>My Skills</h1> 
 
-    <table> 
+    <table class="skills-table">
         <caption>Military, Shooting, and Travel Skills</caption>
         <tr>
             <th>Skill</th>
