--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -17,7 +17,7 @@
     <h1>My Skills</h1> 
 
     <table class="skills-table">
-        <caption>Military, Shooting, and Travel Skills</caption>
+        <caption><strong>Shooting, and Travel Skills</strong></caption>
         <tr>
             <th>Skill</th>
             <th>Proficiency Level</th>
