--- a/lab08/week8notes_floats.html
+++ b/lab08/week8notes_floats.html
@@ -5,6 +5,7 @@
         <title>Unit 8 Floats</title>
         <meta charset="UTF-8">
         <style>
+            .fistimage {float:left;}
         </style>
     </head>
     <body>
@@ -14,7 +15,7 @@
         <h1>Sinclair Broadcast Group hit by ransomware attack, upending local TV newscasts</h1>
         <p>Sinclair Broadcast Group (SBGI), one of the largest TV station operators in the US, said Monday that a ransomware incident is disrupting some of its office and operational networks.</p>
         
-        <img src="https://cdn.cnn.com/cnnnext/dam/assets/210712160202-ransomware-cyberattack---stock-medium-plus-169.jpg" alt="laptop and mouse">
+        <img src="https://cdn.cnn.com/cnnnext/dam/assets/210712160202-ransomware-cyberattack---stock-medium-plus-169.jpg" alt="laptop and mouse" class="firstimage">
 
         <p>The unidentified hackers also stole data from Sinclair's network; the company said it was working to determine what information was taken. Sinclair said it had notified law enforcement and US government agencies, and that it was working to "restore operations quickly and securely."</p>
         <p>Sinclair CEO Chris Ripley repeated the statement at Monday afternoon's town hall and fielded questions from staffers, but he had little concrete information to share, according to the reporters who spoke with CNN.</p>
