--- a/lab08/week8notes_floats.html
+++ b/lab08/week8notes_floats.html
@@ -5,7 +5,7 @@
         <title>Unit 8 Floats</title>
         <meta charset="UTF-8">
         <style>
-            .fistimage {float:left;}
+            .firstimage {float:left;}
         </style>
     </head>
     <body>
