--- a/lab08/week8notes_floats.html
+++ b/lab08/week8notes_floats.html
@@ -7,6 +7,7 @@
         <style>
             .firstimage {float:left;}
             .clearfloat{clear:both;}
+            .secondimage {float:right;}
         </style>
     </head>
     <body>
@@ -22,7 +23,7 @@
         <p>Sinclair CEO Chris Ripley repeated the statement at Monday afternoon's town hall and fielded questions from staffers, but he had little concrete information to share, according to the reporters who spoke with CNN.</p>
         <p>He did specify that employees will still receive their paychecks despite the disruption, one of the reporters said.</p>
         <div class="clearfloat"></div>
-        <img src="https://cdn.cnn.com/cnnnext/dam/assets/210720122433-colonial-pipeline-fuel-tanks-medium-plus-169.jpg" alt="oil tanks">
+        <img src="https://cdn.cnn.com/cnnnext/dam/assets/210720122433-colonial-pipeline-fuel-tanks-medium-plus-169.jpg" alt="oil tanks" class="secondimage">
 
         <p>Sinclair is responsible for 185 television stations in 86 markets, according to its website. It also runs regional sports networks.</p>
         <p>The company's stations are still on the air, and are continuing to show national and syndicated programming like talk shows and sitcoms.</p>
