--- a/lab08/week8notes_floats.html
+++ b/lab08/week8notes_floats.html
@@ -27,6 +27,7 @@
 
         <p>Sinclair is responsible for 185 television stations in 86 markets, according to its website. It also runs regional sports networks.</p>
         <p>The company's stations are still on the air, and are continuing to show national and syndicated programming like talk shows and sitcoms.</p>
+        <div class="clearfloat"></div>
         <p>The problems are largely hindering local live programming, like the newscasts that typically air for multiple hours a day.</p>
         <p>Some stations struggled to produce newscasts on Sunday without writing, editing or scheduling software.</p>
         <p>Kristin Bien, a weekend anchor at Sinclair-owned WSBT 22, tweeted Sunday morning that the incident was a "corporate-wide problem."</p>
