--- a/lab08/week8notes_floats.html
+++ b/lab08/week8notes_floats.html
@@ -5,9 +5,12 @@
         <title>Unit 8 Floats</title>
         <meta charset="UTF-8">
         <style>
-            .firstimage {float:left;}
+            .firstimage {float:left;
+            margin: 20px 20px 20px 0px;}
+            
             .clearfloat{clear:both;}
-            .secondimage {float:right;}
+            .secondimage {float:right;
+            margin: 20px 0px 20px 20px;}
         </style>
     </head>
     <body>
