--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -32,7 +32,7 @@
             
             <p>
                 <a href="https://www.linkedin.com/in/stephen-crossley" target="_blank">
-                    <img src="images/linkedin-logo.png" alt="LinkedIn Logo" width="50">
+                    <img src="../Images/logo-sized.png" alt="LinkedIn Logo" width="50">
                 </a>
             </p>
         </section>
