--- a/lab08/index.html
+++ b/lab08/index.html
@@ -18,7 +18,7 @@
     
     <main>
         <section class="bio-container">
-            <img src="images/military-bio-photo.png" alt="My Photoshop Image" class="bio-img">
+            <img src="../Images/military-bio-photo.png" alt="My Photoshop Image" class="bio-img">
             <h2>Personal Info</h2>
             <p>
                 I am currently majoring in Information Management and Technology. While I find technology fascinating and recognize its growing importance, this field is a fun stepping stone toward my ultimate goal of becoming a commercial airline pilot.
