--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -19,15 +19,13 @@
         <h1>Contact</h1>
     </header>
 
-    <!-- FLEXBOX CONTAINER (Row 1: Contact Info & Links) -->
+    <!-- SINGLE FLEXBOX CONTAINER FOR CONTACT INFO -->
     <div class="contact-container">
         <div class="contact-box">
             <h2>Address</h2>
             <p>Stephen Crossley</p>
             <p>900 South Crouse Ave.</p>
             <p>Syracuse, NY 13210</p>
-        </div>
-        <div class="contact-box">
             <p>
                 <a href="mailto:sjcrossl@syr.edu">Email Me</a>
             </p>
