--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -69,7 +69,7 @@
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.662870079397!2d-72.45584362377554!3d43.46763506441288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e1c4c1d54cdc93%3A0x1d69401b1234c55!2s20%20VT-44%2C%20Windsor%2C%20VT%2005089!5e0!3m2!1sen!2sus!4v1738192285285!5m2!1sen!2sus" 
                 
-                 
+                height="400" 
                 style="border:0; margin-top: 20px;" 
                 allowfullscreen 
                 loading="lazy">
