--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8">
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> 
+    <style>
+        .contact-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 20px;
+        }
+        .contact-box {
+            flex: 1;
+            padding: 20px;
+            background-color: #f4f4f4;
+            border-radius: 10px;
+        }
+        .map-container {
+            flex: 1;
+            text-align: right;
+        }
+        iframe {
+            width: 100%;
+            height: 400px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -42,7 +65,7 @@
         </div>
     </div>
 
-    <!-- FLEXBOX CONTAINER (Row 2: Form & Map) -->
+    <!-- FLEXBOX CONTAINER FOR CONTACT FORM & MAP (Map Floats Right) -->
     <div class="contact-container">
         <div class="contact-box">
             <h2>Contact Me</h2>
@@ -64,13 +87,11 @@
             
                 <input type="submit" value="Submit">
             </form>
-
-            <!-- Google Maps Embed -->
+        </div>
+        
+        <div class="map-container">
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.662870079397!2d-72.45584362377554!3d43.46763506441288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e1c4c1d54cdc93%3A0x1d69401b1234c55!2s20%20VT-44%2C%20Windsor%2C%20VT%2005089!5e0!3m2!1sen!2sus!4v1738192285285!5m2!1sen!2sus" 
-                width="80%" 
-                height="400" 
-                style="border:0; margin-top: 20px;" 
                 allowfullscreen 
                 loading="lazy">
             </iframe>
