--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -7,7 +7,7 @@
     <style>
         .contact-container {
             display: flex;
-            
+            justify-content: space-between;
             align-items: flex-start;
             gap: 20px;
         }
