--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -5,15 +5,16 @@
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> 
     <style>
+        
         .contact-container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
-    margin: 20px auto; /* Centers the section */
+    margin: 20px auto;
     padding: 20px;
-    width: 90%; /* Makes sure it stretches across the page */
-    max-width: 1200px; /* Prevents it from shrinking too much */
+    width: 90%; 
+    max-width: 1200px; 
     box-sizing: border-box;
 }
 
@@ -71,7 +72,7 @@
         </div>
     </div>
 
-    <!-- FLEXBOX CONTAINER FOR CONTACT FORM & MAP (Map Floats Right) -->
+    <!-- FLEXBOX CONTAINER FOR CONTACT Me & MAP -->
     <div class="contact-container">
         <div class="contact-box">
             <h2>Contact Me</h2>
