--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -49,7 +49,7 @@
         <h1>Contact</h1>
     </header>
 
-    <!-- SINGLE FLEXBOX CONTAINER FOR CONTACT INFO -->
+    <!--  FLEXBOX CONTAINER CONTACT INFO -->
     <div class="contact-container">
         <div class="contact-box">
             <h2>Address</h2>
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <!-- FLEXBOX CONTAINER FOR CONTACT Me & MAP -->
+    <!-- FLEXBOX CONTAINER CONTACT Me & MAP -->
     <div class="contact-container">
         <div class="contact-box">
             <h2>Contact Me</h2>
