--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -51,11 +51,14 @@
 
     <!--  FLEXBOX CONTAINER CONTACT INFO -->
     <div class="contact-container">
-        <div class="contact-box">
+        <div class="address">
+            
             <h2>Address</h2>
             <p>Stephen Crossley</p>
             <p>900 South Crouse Ave.</p>
             <p>Syracuse, NY 13210</p>
+        </div> 
+        <div class="linkedin">
             <p>
                 <a href="mailto:sjcrossl@syr.edu">Email Me</a>
             </p>
