--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -8,26 +8,26 @@
         
         .contact-container {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 20px;
     margin: 20px auto;
     padding: 20px;
-    width: 90%; 
-    max-width: 1200px; 
-    box-sizing: border-box;
+    background-color: white;
+    border-radius: 20px;
 }
 
-        .contact-box {
+        .address, .linkedin {
             flex: 1;
             padding: 20px;
-            background-color: #f4f4f4;
-            border-radius: 10px;
         }
+
+        .contact-box {
+            flex: 1; 
+            padding: 20px;
+}
+
         .map-container {
-            flex: 1;
-            text-align: right;
-        }
+             flex: 1;
+}
+
         iframe {
             width: 100%;
             height: 400px;
