--- a/beyond-the-battlefield/chat.html
+++ b/beyond-the-battlefield/chat.html
@@ -96,8 +96,15 @@
         </section>
     </main>
 
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Veterans United - Support Our Heroes</p>
+        <p>
+            Follow Us:
+            <a href="https://www.facebook.com/veterans.crisisline.1" target="_blank">Facebook</a> |
+            <a href="https://x.com/DeptVetAffairs" target="_blank">Twitter</a> |
+            <a href="https://linktr.ee/DeptVetAffairs" target="_blank">Linktr</a>
+        </p>
     </footer>
 </body>
 </html>
