--- a/beyond-the-battlefield/chat.html
+++ b/beyond-the-battlefield/chat.html
@@ -6,7 +6,15 @@
     <title>Veteran Web Chat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+    <style>
+        footer {
+            background-color: #00274D;
+            color: white;
+            padding: 10px 0;
+            margin-top: 30px;
+            font-size: 14px;
+        }
+    </style>
     <!-- Firebase SDK -->
     <script type="module">
         // Import Firebase SDK modules
