--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -3,7 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veteran Memes HQ</title>
+    <title>Veteran Memes HQ - Meme Gallery</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <style>
+        /* ===== Global Styles ===== */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            background-color: #00274D;
+            color: white;
+            padding: 15px 0;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        nav {
+            margin-top: 10px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            margin: 15px;
+            font-weight: bold;
+            padding: 8px 15px;
+            transition: background 0.3s ease-in-out;
+        }
+
+        nav a:hover, .active {
+            background-color: #FFD700;
+            color: #00274D;
+            border-radius: 5px;
+        }
+
+        /* ===== Meme Gallery Styles ===== */
+        .meme-gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .meme {
+            background: white;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .meme img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .meme-caption {
+            font-size: 1.1em;
+            margin-top: 10px;
+            color: #444;
+        }
+
+        /* ===== Footer ===== */
+        footer {
+            background-color: #00274D;
+            color: white;
+            padding: 10px 0;
+            margin-top: 30px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,16 +99,44 @@
     </header>
 
     <main>
-        <section>
-            <h2>Upload Your Meme</h2>
-            <div>
-                <p>📂 Drop your meme here or click to upload</p>
+        <section class="meme-gallery">
+            <!-- Meme 1 -->
+            <div class="meme">
+                <img src="https://via.placeholder.com/300" alt="Meme 1">
+                <p class="meme-caption">"When you realize it's Monday..."</p>
+            </div>
+            <!-- Meme 2 -->
+            <div class="meme">
+                <img src="https://via.placeholder.com/300" alt="Meme 2">
+                <p class="meme-caption">"Just another day in the life..."</p>
+            </div>
+            <!-- Meme 3 -->
+            <div class="meme">
+                <img src="https://via.placeholder.com/300" alt="Meme 3">
+                <p class="meme-caption">"Trying to survive the week!"</p>
+            </div>
+            <!-- Meme 4 -->
+            <div class="meme">
+                <img src="https://via.placeholder.com/300" alt="Meme 4">
+                <p class="meme-caption">"When the coffee hits differently..."</p>
+            </div>
+            <!-- Meme 5 -->
+            <div class="meme">
+                <img src="https://via.placeholder.com/300" alt="Meme 5">
+                <p class="meme-caption">"That feeling when you see your bed..."</p>
             </div>
         </section>
     </main>
 
+     <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Veterans United - Support Our Heroes</p>
+        <p>
+            Follow Us:
+            <a href="https://www.facebook.com/veterans.crisisline.1" target="_blank">Facebook</a> |
+            <a href="https://x.com/DeptVetAffairs" target="_blank">Twitter</a> |
+            <a href="https://linktr.ee/DeptVetAffairs" target="_blank">Linktr</a>
+        </p>
     </footer>
 </body>
 </html>
