--- a/selector.html
+++ b/selector.html
@@ -64,14 +64,14 @@
         <input type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label>
         <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
+        <label for="female">Female</label><br><br><br><br>
 
         <!-- Checkboxes -->
         <p>Select your interests:</p>
         <input type="checkbox" id="sports" name="interests" value="sports">
         <label for="sports">Sports</label>
         <input type="checkbox" id="music" name="interests" value="music">
-        <label for="music">Music</label><br>
+        <label for="music">Music</label><br><br>
 
         <!-- Dropdown Menu -->
         <label for="country">Select Your Country:</label>
@@ -79,7 +79,7 @@
             <option value="usa">United States</option>
             <option value="canada">Canada</option>
             <option value="uk">United Kingdom</option>
-        </select><br><br>
+        </select><br><br><br><br>
 
         <!-- Submit Button -->
         <input type="submit" value="Submit">
