--- a/selector.html
+++ b/selector.html
@@ -64,7 +64,7 @@
         <input type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label>
         <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br><br><br><br>
+        <label for="female">Female</label><br><br>
 
         <!-- Checkboxes -->
         <p>Select your interests:</p>
@@ -79,7 +79,7 @@
             <option value="usa">United States</option>
             <option value="canada">Canada</option>
             <option value="uk">United Kingdom</option>
-        </select><br><br><br><br>
+        </select><br><br>
 
         <!-- Submit Button -->
         <input type="submit" value="Submit">
