--- a/selector.html
+++ b/selector.html
@@ -71,7 +71,7 @@
         <input type="checkbox" id="sports" name="interests" value="sports">
         <label for="sports">Sports</label>
         <input type="checkbox" id="music" name="interests" value="music">
-        <label for="music">Music</label><br><br>
+        <label for="music">Music</label><br><br><br><br>
 
         <!-- Dropdown Menu -->
         <label for="country">Select Your Country:</label>
