--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -25,6 +25,7 @@
         <div class="skills-container">
         
         <!-- 5 Main Skills Section -->
+            <div class="main-skills-wrapper">
             <div class="main-skills">
                 <div class="skills-box">
                     <img src="images/rifle.svg" alt="Marksmanship Icon">
