--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -18,14 +18,13 @@
     
     <main>
         <p class="skills-intro">
-            My background in the military has equipped me with a strong foundation in tactical operations, leadership, and adaptability. Below are my core skills.
+            My background in the military has equipped me with a strong foundation in tactical operations, leadership, and adaptability.
         </p>
 
         <!-- Parent Flexbox (Contains 5 Skills + Other Skills Section) -->
         <div class="skills-container">
         
-        <!-- 5 Main Skills Section -->
-            <div class="main-skills-wrapper">
+            <!-- 5 Main Skills Section -->
             <div class="main-skills">
                 <div class="skills-box">
                     <img src="images/rifle.svg" alt="Marksmanship Icon">
@@ -60,8 +59,10 @@
                     <li>Physical Fitness</li>
                 </ul>
             </aside>
-        </div>
-    </main>
+        </div>  <!-- ✅ Closing the "skills-container" div properly -->
+
+    </main> <!-- ✅ Now this is correctly placed -->
+
         <!--
         <section class="skills-section">
             <table class="skills-table">
