--- a/beyond-the-battlefield/index.html
+++ b/beyond-the-battlefield/index.html
@@ -20,7 +20,7 @@
     <header>
         <h1>Beyond the Battlefield</h1>
        
-        <nav role="navigation">
+        <nav>
             <a href="index.html">Home</a>
             <a href="chat.html">Veteran Chat</a>
             <a href="memes.html">Meme Page</a>
@@ -35,11 +35,12 @@
                 Please play the video to hear an important message that could save your life and the lives of others.
             </p>
             <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/SMozpxLBMvo?autoplay=1&playsinline=1" 
-                title="Veterans Crisis Line PSA" 
-                aria-label="Video promoting veteran suicide prevention awareness"
-                frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            src="https://www.youtube.com/embed/SMozpxLBMvo?autoplay=1&playsinline=1"
+            title="Veterans Crisis Line PSA"
+            aria-label="Video promoting veteran suicide prevention awareness"
+            allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
+
         </section>
 
         <!-- Hero Section (Crisis Support Info) -->
