--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -20,6 +20,7 @@
 
     <main>
         <section class="meme-gallery">
+            <h2>Meme Gallery</h2>
             <!-- Meme 1 -->
             <div class="meme">
                 <img src="https://via.placeholder.com/300" alt="Meme 1">
