--- a/beyond-the-battlefield/chat.html
+++ b/beyond-the-battlefield/chat.html
@@ -83,6 +83,23 @@
             <p>Connect with fellow veterans and share your experiences in a supportive environment.</p>
         </section>
 
+        <section class="chat-purpose">
+            <h3>Why This Chat Exists</h3>
+            <p>
+                This chatroom is a safe space built specifically for veterans. Whether you're here to swap stories, share advice, ask questions about the VA or anything else, or just connect with others who’ve served, you’re welcome. This is your virtual community — no rank, no judgment, just real talk.
+            </p>
+        </section>        
+
+        <section class="chat-rules">
+            <h3>Community Guidelines</h3>
+            <ul>
+                <li>Respect all users</li>
+                <li>No hate speech</li>
+                <li>Do not share sensitive personal info</li>
+                <li>Have fun and connect with fellow vets</li>
+            </ul>
+        </section>
+
         <section class="chatroom">
             <h2>Join the Conversation</h2>
             <div id="chat-box" style="border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: auto; background: #f9f9f9;">
