--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -23,28 +23,28 @@
             <h2>Meme Gallery</h2>
             <!-- Meme 1 -->
             <div class="meme">
-                <img src="https://via.placeholder.com/300" alt="Meme 1">
+                <img src="images/militarymeme1.png" alt="Meme 1">
                 <p class="meme-caption">"When you realize it's Monday..."</p>
             </div>
             <!-- Meme 2 -->
             <div class="meme">
-                <img src="https://via.placeholder.com/300" alt="Meme 2">
+                <img src="images/militarymeme2.png" alt="Meme 2">
                 <p class="meme-caption">"Just another day in the life..."</p>
             </div>
             <!-- Meme 3 -->
             <div class="meme">
-                <img src="https://via.placeholder.com/300" alt="Meme 3">
+                <img src="images/militarymeme3.png" alt="Meme 3">
                 <p class="meme-caption">"Trying to survive the week!"</p>
             </div>
             <!-- Meme 4 -->
             <div class="meme">
-                <img src="https://via.placeholder.com/300" alt="Meme 4">
-                <p class="meme-caption">"When the coffee hits differently..."</p>
+                <img src="images/militarymeme4.png" alt="Meme 4">
+                <p class="meme-caption">"Free Photo Op"</p>
             </div>
             <!-- Meme 5 -->
             <div class="meme">
-                <img src="https://via.placeholder.com/300" alt="Meme 5">
-                <p class="meme-caption">"That feeling when you see your bed..."</p>
+                <img src="images/militarymeme5.png" alt="Meme 5">
+                <p class="meme-caption">"That feeling when you get when you touch his stache"</p>
             </div>
         </section>
     </main>
