--- a/lab10/week10notes.html
+++ b/lab10/week10notes.html
@@ -7,12 +7,14 @@
         <style>
             body {font-family: Arial, Helvetica, sans-serif;}
             .row1 { 
+                display: flex;
+                flex-wrap: wrap;
                 padding: 80px;
                 margin-top: 40px;}
             .row1 div {
                 padding: 40px;
             }
-            img{max-width: 100%;}
+            img {max-width: 100%;}
         </style>
     </head>
     <body>
