--- a/lab10/week10notes.html
+++ b/lab10/week10notes.html
@@ -13,8 +13,19 @@
                 margin-top: 40px;}
             .row1 div {
                 padding: 40px;
+                flex: 1;
             }
-            img {max-width: 100%;}
+            .banner {max-width: 100%;}
+            .bannersmall {max-width: 100%;}
+
+            @media only screen and (max-width: 800px) {
+                body {background-color: #ffa500;} 
+                .banner {display: none;}
+            }
+
+            @media only screen and (min-width: 801px) {
+                .bannersmall  {display: none;}
+        }
         </style>
     </head>
     <body>
