--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -44,7 +44,7 @@
             <!-- Meme 5 -->
             <div class="meme">
                 <img src="images/militarymeme5.png" alt="Meme 5">
-                <p class="meme-caption">"That feeling when you get when you touch his stache"</p>
+                <p class="meme-caption">"This isn’t the bromance the recruiter warned me about."</p>
             </div>
         </section>
     </main>
