--- a/lab11/index.html
+++ b/lab11/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 11</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://peopel-su.github.io/ist263/images/animate.css">
-</head>
-<body>
+    
+    <style>
+      .container {
+        display: flex;
+      }
+      #first { order: 1; }
+      #second { order: 2; }
+      #third { order: 3; }
+    </style>
+  </head>
+  
+<body onload="ShuffleShells();">
     <h1>Choose a Walnut</h1>
     <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="first walnut" class="first">
     <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="second walnut" class="second">
