--- a/lab12/lab.html
+++ b/lab12/lab.html
@@ -14,11 +14,13 @@
     }
 
     .container {
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      gap: 40px;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 60px;
+}
+
+
 
     .large-planet {
       width: 300px;
