--- a/lab13/participation13.html
+++ b/lab13/participation13.html
@@ -11,7 +11,7 @@
     }
 
     a {
-      background-color: coral;
+      background-color: orange;
       padding: 30px;
       text-decoration: none;
       font-size: 24px;
