--- a/milestone6/index.html
+++ b/milestone6/index.html
@@ -31,7 +31,7 @@
         <!-- Video Section -->
         <section class="video">
             <h2>Watch This PSA - Your Life Matters</h2>
-            <p style="font-size: 0.9em; color: gray; margin-top: -10px;">
+            <p style="font-size: 0.9em; color: black; margin-top: -10px;">
                 Please play the video to hear an important message that could save your life and the lives of others.
             </p>
             <iframe width="560" height="315" 
