--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -42,7 +42,7 @@
             </p>
             <p>
                 <a href="https://www.linkedin.com/in/stephen-crossley" target="_blank">
-                    <img src="../Images/linkedin(1).png" alt="LinkedIn Logo" width="50">
+                    <img src="../Images/linkedin(1).png" alt="LinkedIn profile for Stephen Crossley" width="100">
                 </a>
             </p>
         </div>
