--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -48,7 +48,20 @@
             </div>
         </section>
     </main>
-
+    <script>
+        // Show the button
+        window.onscroll = function () {
+            document.getElementById("topBtn").style.display =
+                document.body.scrollTop > 200 || document.documentElement.scrollTop > 200
+                    ? "block"
+                    : "none";
+        };
+    
+        // Scroll to top
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        }
+    </script>
      <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Veterans United - Support Our Heroes</p>
