--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -29,23 +29,23 @@
             <div class="main-skills">
                 <div class="skills-box">
                     <img src="images/rifle.svg" alt="Marksmanship Icon">
-                    <p>Marksmanship</p>
+                    <h3>Marksmanship</h3>
                 </div>
                 <div class="skills-box">
                     <img src="images/land_nav.svg" alt="Land Navigation Icon">
-                    <p>Land Navigation</p>
+                    <h3>Land Navigation</h3>
                 </div>
                 <div class="skills-box">
                     <img src="images/first_aid.svg" alt="Combat First Aid Icon">
-                    <p>Combat First Aid</p>
+                    <h3>Combat First Aid</h3>
                 </div>
                 <div class="skills-box">
                     <img src="images/radio.svg" alt="Radio Communication Icon">
-                    <p>Radio Communication</p>
+                    <h3>Radio Communication</h3>
                 </div>
                 <div class="skills-box">
                     <img src="images/humvee.svg" alt="Vehicle Maneuvers Icon">
-                    <p>Vehicle Maneuvers</p>
+                    <h3>Vehicle Maneuvers</h3>
                 </div>
             </div>
 
