--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -144,7 +144,7 @@
 
         <hr>
         <footer>
-            <p>&copy; 2025 Stephen Crossley</p>
+            &copy; 2025 Stephen Crossley
         </footer>
 </body>
 </html>
