--- a/lab13/index.html
+++ b/lab13/index.html
@@ -20,7 +20,7 @@
     
     <main>
        <div> <section class="bio-flex">
-            <img src="../Images/military-bio-photo.png" alt="U.S. Army 10th Mountain Division badge and portrait of Stephen Crossley with text: From the Battlefield to the Skies" class="bio-img">
+            <img src="../Images/military-bio-photo.png" alt="Stephen Crossley with 10th Mountain badge" class="bio-img">
         </div>
           
         <div>
