--- a/beyond-the-battlefield/memes.html
+++ b/beyond-the-battlefield/memes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veteran Memes HQ - Meme Gallery</title>
+    <title>Meme Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -72,6 +72,21 @@
             <a href="https://linktr.ee/DeptVetAffairs" target="_blank">Linktr</a>
         </p>
     </footer>
+    <button onclick="scrollToTop()" id="topBtn" title="Back to Top">↑</button>
+        <script>
+            // Show the button
+            window.onscroll = function () {
+                document.getElementById("topBtn").style.display =
+                    document.body.scrollTop > 200 || document.documentElement.scrollTop > 200
+                        ? "block"
+                        : "none";
+            };
+        
+            // Scroll to top
+            function scrollToTop() {
+                window.scrollTo({ top: 0, behavior: "smooth" });
+            }
+        </script>
 </body>
 </html>
 
