--- a/beyond-the-battlefield/index.html
+++ b/beyond-the-battlefield/index.html
@@ -58,7 +58,7 @@
             <!-- First Image & Quote -->
             <img src="images/suicideawareness.webp" alt="Veteran reflecting on life">
             <blockquote>
-                "Courage is not the absence of fear, but the ability to act despite it."
+                Courage is not the absence of fear, but the ability to act despite it.
             </blockquote>
         
             <!-- Second Image & Statistic -->
@@ -70,7 +70,7 @@
             <!-- Third Image & Encouraging Message -->
             <img src="images/veteranawareness.webp" alt="Veteran standing with a U.S. flag in the background">
             <blockquote>
-                "The bravest thing you can do is ask for help."
+                The bravest thing you can do is ask for help.
             </blockquote>
         </section>
         
