--- a/beyond-the-battlefield/index.html
+++ b/beyond-the-battlefield/index.html
@@ -28,7 +28,14 @@
     </header>
 
     <main>
-        <!-- Video Section -->
+        <section class="mission">
+            <h2>Our Mission</h2>
+            <p>
+                This site was created by a veteran, for veterans. Our mission is to raise awareness about veteran suicide, 
+                provide support resources, and offer a space for connection and community. You are not alone—your service 
+                and your story matter.
+            </p>
+        </section>
         <section class="video">
             <h2>Watch This PSA - Your Life Matters</h2>
             <h3 style="font-size: 1.0em; color: black; margin-top: -10px;">
