--- a/beyond-the-battlefield/chat.html
+++ b/beyond-the-battlefield/chat.html
@@ -102,7 +102,7 @@
 
         <section class="chatroom">
             <h2>Join the Conversation</h2>
-            <div id="chat-box" style="border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: auto; background: #f9f9f9;">
+            <div id="chat-box" style="border: 1px solid #ffffff; padding: 10px; height: 300px; overflow-y: auto; background: #ffffff;">
                 <!-- Messages will appear here -->
             </div>
             <form id="chat-form" onsubmit="sendMessage(event)">
