--- a/lab13/index.html
+++ b/lab13/index.html
@@ -83,6 +83,7 @@
     <hr>
     <footer>
         &copy; 2025 Stephen Crossley
+        <div style="height: 50px;"></div>
     </footer>
 </body>
 </html>
