--- a/lab13/index.html
+++ b/lab13/index.html
@@ -14,9 +14,10 @@
 
     </nav>
     
-    <header>
-        <h1>Stephen Crossley's Biography</h1>
+    <header class="header-container">
+        <h1 class="page-title">Stephen Crossley's Biography</h1>
     </header>
+
     
     <main>
        <div> <section class="bio-flex">
