--- a/lab14/index.html
+++ b/lab14/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to Content</a>
+
     <nav>
         <a href="index.html">Home</a> <span>|</span>
         <a href="skills.html">Skills</a> <span>|</span>
@@ -22,7 +24,7 @@
     </header>
 
     
-    <main>
+    <main id="main-content">
        <div> <section class="bio-flex">
             <img src="../Images/military-bio-photo.png" alt="Stephen Crossley with 10th Mountain badge" class="bio-img">
         </div>
