--- a/milestone7/memes.html
+++ b/milestone7/memes.html
@@ -23,33 +23,33 @@
             <h2>Meme Gallery</h2>
             <!-- Meme 1 -->
             <div class="meme">
-                <img src="images/militarymeme1.png" alt="Meme 1">
+                <img src="images/militarymeme1.png" alt="Soldier lying face down in uniform doing a front leaning rest position indoors.">
                 <p class="meme-caption">"When you realize it's Monday..."</p>
             </div>
             <!-- Meme 2 -->
             <div class="meme">
-                <img src="images/militarymeme2.png" alt="Meme 2">
+                <img src="images/militarymeme2.png" alt="Soldier kicking a door open while others stand by during a raid.">
                 <p class="meme-caption">"Just another day in the life..."</p>
             </div>
             <!-- Meme 3 -->
             <div class="meme">
-                <img src="images/militarymeme3.png" alt="Meme 3">
+                <img src="images/militarymeme3.png" alt="Soldier tossing a grenade into a room during a building sweep.">
                 <p class="meme-caption">"Trying to survive the week!"</p>
             </div>
             <!-- Meme 4 -->
             <div class="meme">
-                <img src="images/militarymeme4.png" alt="Meme 4">
+                <img src="images/militarymeme4.png" alt="Humvee turret with a handwritten sign reading 'Iraqi Photos – Look Here, Smile, Wait for Flash' mounted near the barrel of a machine gun.">
                 <p class="meme-caption">"Free Photo Op"</p>
             </div>
             <!-- Meme 5 -->
             <div class="meme">
-                <img src="images/militarymeme5.png" alt="Meme 5">
+                <img src="images/militarymeme5.png" alt="Air Force meme showing two male airmen posing in a mock-romantic portrait with the caption 'Changing lifestyles, one mustache at a time.">
                 <p class="meme-caption">"This isn’t the bromance the recruiter warned me about."</p>
             </div>
         </section>
     </main>
 
-     <!-- Footer Section -->
+     
     <footer>
         <p>&copy; 2025 Veterans United - Support Our Heroes</p>
         <p>
