--- a/milestone7/memes.html
+++ b/milestone7/memes.html
@@ -38,12 +38,12 @@
             </div>
             <!-- Meme 4 -->
             <div class="meme">
-                <img src="images/militarymeme4.png" alt="Humvee turret with a handwritten sign reading 'Iraqi Photos – Look Here, Smile, Wait for Flash' mounted near the barrel of a machine gun.">
+                <img src="images/militarymeme4.png" alt="Military vehicle with sign reading Look here, smile, wait for flash">
                 <p class="meme-caption">"Free Photo Op"</p>
             </div>
             <!-- Meme 5 -->
             <div class="meme">
-                <img src="images/militarymeme5.png" alt="Air Force meme showing two male airmen posing in a mock-romantic portrait with the caption 'Changing lifestyles, one mustache at a time.">
+                <img src="images/militarymeme5.png" alt="Two U.S. Air Force members posing in mock-romantic photo.">
                 <p class="meme-caption">"This isn’t the bromance the recruiter warned me about."</p>
             </div>
         </section>
